<resources>
    <string name="app_name">Pattern Hwaseung</string>
    <string name="title_select_component">SELECT PROCESS</string>
    <string name="title_available_info">AVAILABLE INFO</string>
    <string name="title_operator_info">OPERATOR INFO</string>
    <string name="title_operator_detail">OPERATOR DETAIL</string>
    <string name="title_last_worker">LAST WORKER</string>
    <string name="title_last_design" translatable="false">LAST DESIGN</string>
    <string name="title_setting">SETTING</string>
    <string name="title_counter_device_info">COUNTER DEVICE INFO</string>
    <string name="title_server_info">SERVER INFO</string>
    <string name="title_etc">ETC</string>
    <string name="title_count_info">COUNT INFO</string>
    <string name="title_target_type">TARGET TYPE</string>
    <string name="title_work_sheet">WORK SHEET</string>
    <string name="title_special_options" translatable="false">SPECIAL OPTIONS</string>
    <string name="title_production_report">PRODUCTION REPORT</string>
    <string name="title_push_info">PUSH MESSAGE INFO</string>
    <string name="title_edit_pieces_pairs_count">EDIT PALLET COUNT</string>
    <string name="title_edit_defective_count" translatable="false">EDIT DEFECTIVE COUNT</string>
    <string name="title_design_info">DESIGN INFO</string>
    <string name="title_pieces_info">PALLET INFO</string>
    <string name="title_edit_count" translatable="false">EDIT COUNT Q\'ty</string>
    <string name="title_actual_count_edit">ACTUAL Q\'ty EDIT</string>
    <string name="title_actual_count_edit_input">EDIT ACTUAL Q\'ty</string>
    <string name="title_defective_input">Defective input</string>
    <string name="title_downtime">DOWNTIME</string>
    <string name="title_down_time">Down time</string>
    <string name="title_down_time_info">Down Time Info</string>
    <string name="title_down_time_input">Down Time Input</string>
    <string name="title_down_time_list">Down Time Input</string>
    <string name="title_product_list">Product List</string>
    <string name="title_time">TIME</string>
    <string name="title_latest_version" translatable="false">VERSION INFO.</string>
    <string name="title_setting_info" translatable="false">SETTING INFO.</string>
    <string name="button_total_count_view">Total Count View</string>
    <string name="button_component_count_view">Process Count View</string>
    <string name="button_select_component">Select Process</string>
    <string name="label_wifi">WiFi</string>
    <string name="label_ip">IP</string>
    <string name="label_mac">MAC</string>
    <string name="label_factory">FACTORY</string>
    <string name="label_room">ZONE</string>
    <string name="label_line">LINE</string>
    <string name="label_mc_no">M/C No</string>
    <string name="label_mc_model">MC MODEL</string>
    <string name="label_mc_serial">MC SERIAL</string>
    <string name="label_server_ip">SERVER IP</string>
    <string name="label_server_port">PORT</string>
    <string name="label_wos_name">WOS name to display</string>
    <string name="label_worksheet_display_time">WorkSheet Display Time</string>
    <string name="label_count_trim_qty">Pallet</string>
    <string name="label_count_trim_pairs">Pair(s)</string>
    <string name="label_long_touch_enable">Long Touch Enable</string>
    <string name="label_message_enable">Message Enable</string>
    <string name="label_sound_at_count">Sound at Count</string>
    <string name="label_start_at_target_1">Start at target 1</string>
    <string name="label_seconds">Seconds</string>
    <string name="label_screen_blink_effect">SCREEN BLINK EFFECT</string>
    <string name="label_downtime_blink_effect" translatable="false">Downtime Blink Effect</string>
    <string name="label_send_stitch_count" translatable="false">Send Stitch Q\'ty</string>
    <string name="label_planned_count_process" translatable="false">Planned Time Actual Count</string>
    <string name="label_target_stop_when_downtime" translatable="false">Target Q\'ty Stop When DownTime</string>
    <string name="label_ask_when_clicking_defective" translatable="false">Open window when clicking Defective</string>
    <string name="label_piece_pair_count_edit" translatable="false">Pallet/Pair(s) Count editing function</string>
    <string name="label_target_by_group" translatable="false">Target by Group</string>
    <string name="label_reverse_downtime_check" translatable="false">Reverse the Downtime Check</string>
    <string name="label_remaining_number">REMAINING NUMBER</string>
    <string name="label_from_server">FROM SERVER</string>
    <string name="label_from_device">FROM DEVICE</string>
    <string name="label_server_time">Server Time</string>
    <string name="label_device_time">Device Time</string>
    <string name="label_server_version" translatable="false">Latest Version</string>
    <string name="label_device_version" translatable="false">Device Version</string>
    <string name="label_automatic_time" translatable="false">Automatic date/time</string>
    <string name="label_from_cycle_time">FROM CYCLE TIME</string>
    <string name="label_target_per_shift">TARGET PER SHIFT</string>
    <string name="label_shift1">1 Shift</string>
    <string name="label_shift2">2 Shift</string>
    <string name="label_shift3">3 Shift</string>
    <string name="label_sop_name" translatable="false">Worksheet Name</string>
    <string name="list_item_shift">SHIFT</string>
    <string name="list_item_work_time">WORK TIME</string>
    <string name="list_item_planned_time">PLANNED TIME</string>
    <string name="list_item_planned_time1">PLANNED TIME1</string>
    <string name="list_item_planned_time2">PLANNED TIME2</string>
    <string name="list_item_employee_number">EMPLOYEE NUMBER</string>
    <string name="list_item_name">NAME</string>
    <string name="list_item_shift1">SHIFT 1</string>
    <string name="list_item_shift2">SHIFT 2</string>
    <string name="list_item_shift3">SHIFT 3</string>
    <string name="label_wos">WOS</string>
    <string name="label_component">PROCESS</string>
    <string name="label_size">SIZE</string>
    <string name="label_layer">LAYER</string>
    <string name="label_layers">LAYER(S)</string>
    <string name="label_pairs">PAIR(S)</string>
    <string name="label_pairs_lower">Pair(s)</string>
    <string name="label_sec_per_pallet">(sec/pallet)</string>
    <string name="label_sec_per_pairs">(sec/pairs)</string>
    <string name="label_model2">MODEL</string>
    <string name="label_style">STYLE</string>
    <string name="label_target">TARGET</string>
    <string name="label_actual">ACTUAL</string>
    <string name="label_actual_plus">+ ACTUAL</string>
    <string name="label_rate">RATE</string>
    <string name="list_item_no" translatable="false">NO</string>
    <string name="list_item_usage_time" translatable="false">Usage Time</string>
    <string name="list_item_remain_time" translatable="false">Remain Time</string>
    <string name="list_item_remain_rate" translatable="false">Remain Rate</string>
    <string name="list_header_idx">IDX</string>
    <string name="list_header_model">Model</string>
    <string name="list_header_article">Article</string>
    <string name="list_header_material">Material</string>
    <string name="list_header_component">Process</string>
    <string name="list_header_cycle_time">CycleTime</string>
    <string name="list_header_pallet" translatable="false">Pallet</string>
    <string name="list_header_pairs" translatable="false">Pairs</string>
    <string name="list_header_cycle_time_per_pallet">CycleTime / Pallet</string>
    <string name="list_header_cycle_time_per_paris">CycleTime / Pair(s)</string>
    <string name="label_pieces">Pallet</string>
    <string name="guide_pieces">= 1 Count</string>
    <string name="label_actual_count" translatable="false">ACTUAL COUNT</string>
    <string name="label_actual_count_edit_input">EDIT ACTUAL Q\'ty</string>
    <string name="label_defective_input_qty">Defective Q\'ty</string>
    <string name="label_defective_input_list">Defective List</string>
    <string name="msg_has_notcompleted">Info not complete</string>
    <string name="button_count_view">COUNT VIEW</string>
    <string name="button_work_info">WORK INFO</string>
    <string name="button_design_info">DESIGN INFO</string>
    <string name="button_operator_detail">OPERATOR DETAIL</string>
    <string name="button_setting">SETTING</string>
    <string name="button_accumulation_by_start">Accumulation by Start</string>
    <string name="button_accumulation_by_hourly">Accumulation by Hourly</string>
    <string name="button_total_target_per_shift">Total Target per Shift</string>
    <string name="button_tab_system_setting">SYSTEM SETTING</string>
    <string name="button_tab_count_setting">COUNT SETTING</string>
    <string name="button_tab_target_setting">TARGET SETTING</string>
    <string name="button_tab_time_setting">TIME SETTING</string>
    <string name="button_tab_etc_setting">ETC SETTING</string>
    <string name="button_tab_version_setting" translatable="false">APP VERSION</string>
    <string name="bottom_label_machine_info">MACHINE INFO</string>
    <string name="bottom_label_operator_info">OPERATOR INFO</string>
    <string name="bottom_label_employee_number">Employee Number</string>
    <string name="bottom_label_employee_name">Name</string>
    <string name="save">Save</string>
    <string name="server">SERVER</string>
    <string name="manual">Manual</string>
    <string name="confirm">Confirm</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="start_of_display">Display Start</string>
    <string name="end_of_display">Display Stop</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="edit">EDIT</string>
    <string name="sop" translatable="false">SOP</string>
    <string name="cancel">Cancel</string>
    <string name="mc_stop" translatable="false">M/C STOP</string>
    <string name="mc_start" translatable="false">M/C START</string>
    <string name="check">Check</string>
    <string name="start_update" translatable="false">Update</string>
    <string name="search">SEARCH</string>
    <string name="notice">Notice</string>
    <string name="defective">Defective</string>
    <string name="time">Time</string>
    <string name="date" translatable="false">Date</string>
    <string name="filename">File name</string>
    <string name="availability">Availability</string>
    <string name="performance">Performance</string>
    <string name="quality">Quality</string>
    <string name="list_item_wos">WOS</string>
    <string name="list_item_model">MODEL</string>
    <string name="list_item_size">SIZE</string>
    <string name="list_item_target">TARGET</string>
    <string name="list_item_actual">ACTUAL</string>
    <string name="list_item_balance">BALANCE</string>
    <string name="list_item_design_idx">DESIGN IDX</string>
    <string name="list_item_product_rate">PRODUCT RATE</string>
    <string name="list_item_defective">DEFECTIVE</string>
    <string name="list_item_qualti_rate">QUALLTY RATE</string>
    <string name="list_item_start_time">Start Time</string>
    <string name="list_item_end_time">End Time</string>
    <string name="list_item_down_time">DownTime</string>
    <string name="list_item_completed">Completed</string>
    <string name="list_item_list">List</string>
    <string name="list_item_total">TOTAL</string>
    <string name="trim_count">TRIM COUNT</string>
    <string name="stitch_count">STITCH COUNT</string>
    <string name="edit_pieces">EDIT PALLET COUNT</string>
    <string name="edit_pairs">EDIT PAIR(S) COUNT</string>
    <string name="delay_time">DELAY TIME</string>
    <string name="pieces_count">PALLET COUNT</string>
    <string name="pairs_count">PAIR(S) COUNT</string>
    <string name="defective_count" translatable="false">DEFECTIVE COUNT</string>
    <string name="msg_no_operator">Operator not found</string>
</resources>