<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_item_row0"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="@string/list_item_wos"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_item_row1"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:text="@string/list_item_model"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/tv_item_row2"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/list_item_size"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/tv_item_row3"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/list_item_target"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/tv_item_row4"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/list_item_actual"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/tv_item_row5"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/list_item_balance"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
