<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dialog_bg"
                android:background="#88000000">


    <LinearLayout
            android:id="@+id/ll_popup_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="120dp"
            android:layout_marginHorizontal="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#fff"
            android:layout_centerInParent="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:background="#4f4f4f"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/title_last_design"
                    android:textColor="#fff"
                    android:textSize="28dp"
                    android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/grid_header_text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/list_header_idx"
                        android:textSize="21sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                <TextView
                        style="@style/grid_header_text"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:text="@string/list_header_model"
                        android:textSize="21sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                <TextView
                        style="@style/grid_header_text"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/list_header_article"
                        android:textSize="21sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                <TextView
                        style="@style/grid_header_text"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:text="@string/list_header_material"
                        android:textSize="21sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                <TextView
                        style="@style/grid_header_text"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:text="@string/list_header_component"
                        android:textSize="21sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                <TextView
                        style="@style/grid_header_text"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/list_header_cycle_time"
                        android:textSize="21sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="#000"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#999"/>

            <ListView
                    android:id="@+id/lv_design"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:divider="#fff"
                    android:dividerHeight="0dp" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#000"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#999"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="60dp"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_confirm"
                    style="@style/btn_orange"
                    android:stateListAnimator="@null"
                    android:text="@string/exit" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
